src/objects/zqu__InvoiceTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anchor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Key__c</fullName>
        <label>Brand Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Logo_Filenames</valueSetName>
        </valueSet>
    </fields>
</CustomObject>